Added submit button with onClick handler

--- a/to-do-list/src/app/app.component.html
+++ b/to-do-list/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>To-Do List (Angular)</h1>
+<button (click)="addItem()">Submit</button>
 <grocery-list></grocery-list>
 <router-outlet></router-outlet>
