Implemented submitInput to add to list. Commented out InputFormComponent

--- a/to-do-list/src/app/app.component.html
+++ b/to-do-list/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>To-Do List (Angular)</h1>
-<input-form></input-form>
+<!-- <input-form></input-form> -->
 <grocery-list></grocery-list>
 <router-outlet></router-outlet>
