Adding constructor params

--- a/to-do-list/src/app/app.component.html
+++ b/to-do-list/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>To-Do List (Angular)</h1>
 <input-form></input-form>
+<update-form></update-form>
 <grocery-list></grocery-list>
 <router-outlet></router-outlet>
